# sshcli

./: .coverage  .coveragerc  .gitignore  CHANGELOG.md  README.md  __init__.py  pyproject.toml  requirements.txt  sonar-project.properties  ui.py
.github/workflows/: python-package.yml  sonar.yml  tests.yml
.kiro/specs/ssh-host-tagging/: design.md  requirements.md  tasks.md
ixlab_sshcli.egg-info/: SOURCES.txt
sshcli/: cli.py  config.py  models.py
sshcli/commands/: __init__.py  add.py  backup.py  common.py  config_source.py  copy.py  edit.py  find.py  key.py  list.py  remove.py  show.py  tag.py
sshcli/core/: __init__.py  config.py  metadata.py  settings.py
tests/: conftest.py  test_cli.py  test_commands_add.py  test_commands_backup.py  test_commands_config_source.py  test_commands_copy.py  test_commands_find.py  test_commands_help.py  test_commands_key.py  test_commands_remove.py  test_commands_show.py  test_commands_tag.py  test_config.py
ui/: main_window.py  option_dialog.py  tag_dialog.py
